# iq-puzzler-pro-solver

./: .gitignore  README.md  Untitled.ipynb  pyproject.toml
src/iqpuzzlesolver/: pieces.py  solver.py  start_positions.py
